# crewai-perseus-vault

./: README.md  pyproject.toml
.github/workflows/: publish.yml
crewai_mimir/: __init__.py  _client.py  tools.py
crewai_perseus_vault/: __init__.py  _client.py  tools.py
tests/: test_smoke_real_binary.py  test_tools.py
