[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-perseus-vault"
version = "0.1.0"
authors = [
    { name = "Perseus Computing LLC", email = "hermes@perseus.observer" },
]
description = "Perseus Vault long-term memory as CrewAI tools — local-first, encrypted, persistent memory the agent can explicitly call."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["crewai", "perseus-vault", "memory", "agents", "mcp", "tools", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "crewai>=0.80.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Perseus-Computing-LLC/crewai-mimir"
Repository = "https://github.com/Perseus-Computing-LLC/crewai-mimir"
"Bug Tracker" = "https://github.com/Perseus-Computing-LLC/crewai-mimir/issues"
"Perseus Vault" = "https://github.com/Perseus-Computing-LLC/perseus-vault"

[tool.hatch.build.targets.wheel]
packages = ["crewai_perseus_vault"]
